add 10/31 changes to experience and projects

--- a/index.html
+++ b/index.html
@@ -62,20 +62,33 @@
 							<h2>Experience</h2>
 							<div class="features">
 								<section>
+									<span class="icon solid major fa-robot"></span>
+									<h3>Robotics Software Engineer and Research Intern</h3>
+									<h4>Argonne National Laboratory</h4>
+									<h5>July 2022 - September 2022</h5>
+									<p>
+										- Implemented a new driver to control UR5e robot arms through user inputs. Applied computer vision algorithms to center UR5e robot grippers on a QR code
+										<br>- Assessed the viability of new navigation and manipulator robots in lab automation
+										<br>- Designed and 3-D printed robotic grippers for LoCoBot robot arm
+										<br>- Utilized HTTP to control OT-2 Pipetting Robot</p>
+								</section>
+								<section>
 									<span class="icon solid major fa-laptop"></span>
 									<h3>Computer Science Intern</h3>
 									<h4>Simplicita</h4>
+									<h5>June 2021 - December 2021</h5>
 									<p>
 										- Restructured a PostrgreSQL database to increase overall query performance by an average of 95%
 										<br>- Utilized website scraping tools to compile data into a PostgreSQL database and extract documents pertaining to hundreds of government contracts
 										<br>- Wrote R scripts to extract contract-specific information using simple search and optical character recognition
 										<br>- Evaluated the potential value of machine learning assisted solutions such as the Amazon Web Service Textract
-										<br>- Extract information needed for business proposals from CSV files using R</p>
+										<br>- Extracted information needed for business proposals from CSV files using R</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-keyboard"></span>
 									<h3>Board Member and Valorant Representative</h3>
-									<h4>Phoenix Gaming and Esports (UChicago RSO)</h4>
+									<h4>Phoenix Gaming and Esports (University of Chicago Recognized Student Organization)</h4>
+									<h5>October 2020 - Present</h5>
 									<p>
 										- Generate ideas for funding
 										<br>- Recruit university students to the Valorant team
@@ -87,9 +100,10 @@
 									<span class="icon solid major fa-school"></span>
 									<h3>Teacher’s Aide and Tutor</h3>
 									<h4>MetroSquash</h4>
+									<h5>September 2017 - April 2018</h5>
 									<p>
-										- Arrange and lead weakly activity station
-										<br>- Tutor eighth-grade students in math and reading</p>
+										- Arranged and led weakly activity stations
+										<br>- Tutored eighth-grade students in math and reading</p>
 								</section>
 							</div>
 						</div>
@@ -100,6 +114,24 @@
 						<div class="inner">
 							<h2>Projects</h2>
 							<div class="features">
+								<section>
+									<span class="icon solid major fa-robot"></span>
+									<h3>Will Smith Robot Slaps Chris Rock Balloon</h3>
+									<h4>University of Chicago</h4>
+									<p>Programed a robot to aim a laser at pictures of Chris Rock’s face only if a picture of Jada Smith is within view. Implemented Q-Learning (a reinforcement learning algorithm) to shoot the pictures in the optimal order according to custom scoring rules based on distance and displacement of pictures</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-robot"></span>
+									<h3>Particle Localization</h3>
+									<h4>University of Chicago</h4>
+									<p>Estimate position and orientation of a robot in a given map  by generating virtual particles at hypothetical positions of the robot and filtering out particles that do not match the robot’s sensor measurements</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-robot"></span>
+									<h3>Q-Learning</h3>
+									<h4>University of Chicago</h4>
+									<p>Teach a robot to pick up objects and place them in the correct locations using a Q-Learning algorithm</p>
+								</section>
 								<section>
 									<span class="icon solid major fa-wifi"></span>
 									<h3>IP Router</h3>
@@ -117,24 +149,6 @@
 									<h3>Internet Relay Chat Server</h3>
 									<h4>University of Chicago</h4>
 									<p>Implement a system that is compliant with IRC protocols allowing IRC clients to communicate with the server and relay messages between each other</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-robot"></span>
-									<h3>Particle Localization</h3>
-									<h4>University of Chicago</h4>
-									<p>Estimate position and orientation of a robot in a given map  by generating virtual particles at hypothetical positions of the robot and filtering out particles that do not match the robot’s sensor measurements</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-robot"></span>
-									<h3>Q-Learning</h3>
-									<h4>University of Chicago</h4>
-									<p>Teach a robot to pick up objects and place them in the correct locations using a Q-Learning algorithm</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-robot"></span>
-									<h3>Will Smith Robot Slaps Chris Rock Balloon</h3>
-									<h4>University of Chicago</h4>
-									<p>Aim a laser with a robot arm at any image of Chris Rock that comes into the camera feed if Jada Smith is also recognized in the camera feed</p>
 								</section>
 							</div>
 						</div>
