fixed spacing on project demos

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 									<h4>The robot aims a laser at pictures of Chris Rock once a picture of Jada Smith is within view.</h4>
 									<p>You can visit the project GitHub repository <a href="https://github.com/KendrickXie/robotics_final_project">here</a>.</p>
 								</section>
+							</div>
+							<div class="features">
 								<section>
 									<span class="icon solid major fa-gamepad"></span>
 									<h3>Jumpy Boys</h3>
