specified speed of playtest

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<h5>June 2022</h5>
 									<p>Created a platformer using Godot where the goal is to collect all eleven coins on the map as fast as possible. The game features challenging physics and requires teamwork to succeed.</p>
 									<iframe width="560" height="315" src="https://www.youtube.com/embed/IvqJJwKfEDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-									<h4>Cocreator Josh Preston and I playtest Jumpy Boys</h4>
+									<h4>Cocreator Josh Preston and I playtest Jumpy Boys (3x Speed)</h4>
 									<p>You can download and play the game <a href="https://drive.google.com/drive/folders/1lvU7zyjZ1RVhRsRJwJpd1r9pdmOQl_HJ?usp=sharing">here</a>.</p>
 								</section>
 							</div>
