fixed scaling of youtube videos

--- a/index.html
+++ b/index.html
@@ -58,38 +58,38 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper style2 spotlights">
+					<section id="two" class="wrapper style3 spotlights">
 						<div class="inner">
 							<h2>Project Demos</h2>
-							<div class="features">
 								<section>
 									<span class="icon solid major fa-robot"></span>
 									<h3>Gridshot Targeting System</h3>
 									<h4>University of Chicago</h4>
 									<h5>June 2022</h5>
 									<p>Programmed a robot to target and shoot lasers at recognized faces. Implemented Q-Learning to conduct a field scan and find the optimal order of targets to shoot according to a custom scoring system</p>
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/klaCk9TM8Uc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<div class="iframe-container">
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/klaCk9TM8Uc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
 									<h4>The robot aims a laser at pictures of Chris Rock once a picture of Jada Smith is within view.</h4>
 									<p>You can visit the project GitHub repository <a href="https://github.com/KendrickXie/robotics_final_project">here</a>.</p>
 								</section>
-							</div>
-							<div class="features">
 								<section>
 									<span class="icon solid major fa-gamepad"></span>
 									<h3>Jumpy Boys</h3>
 									<h4>University of Chicago</h4>
 									<h5>June 2022</h5>
 									<p>Created a platformer using Godot where the goal is to collect all eleven coins on the map as fast as possible. The game features challenging physics and requires teamwork to succeed.</p>
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/IvqJJwKfEDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<div class="iframe-container">
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/IvqJJwKfEDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
 									<h4>Cocreator Josh Preston and I playtest Jumpy Boys (3x Speed)</h4>
 									<p>You can download and play the game <a href="https://drive.google.com/drive/folders/1lvU7zyjZ1RVhRsRJwJpd1r9pdmOQl_HJ?usp=sharing">here</a>.</p>
 								</section>
-							</div>
 						</div>
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style3 fade-up">
+					<section id="three" class="wrapper style2 fade-up">
 						<div class="inner">
 							<h2>Experience</h2>
 							<div class="features">
