--- a/index.html
+++ b/index.html
@@ -186,54 +186,42 @@
 					<section id="five" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<div class="split style1">
-								<section>
-									<form method="post" action="https://formspree.io/f/myyoqpgg">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
+							<section>
+								<form method="post" action="https://formspree.io/f/myyoqpgg">
+									<div class="fields">
+										<div class="field half">
+											<label for="name">Name</label>
+											<input type="text" name="name" id="name" />
 										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>5734 S Kimbark Ave<br />
-											Chicago, IL 60637<br />
-											USA</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="#">kendrickxie@gmail.com</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(773) 571-1314</span>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="https://github.com/KendrickXie" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="https://www.linkedin.com/in/kendrick-xie-4061b320a/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
+										<div class="field half">
+											<label for="email">Email</label>
+											<input type="text" name="email" id="email" />
+										</div>
+										<div class="field">
+											<label for="message">Message</label>
+											<textarea name="message" id="message" rows="5"></textarea>
+										</div>
+									</div>
+									<ul class="actions">
+										<li><a href="" class="button submit">Send Message</a></li>
 									</ul>
-								</section>
-							</div>
+								</form>
+							</section>
+							<section>
+								<ul class="contact">
+									<li>
+										<h3>Email</h3>
+										<a href="#">kxie1@uchicago.edu</a>
+									</li>
+									<li>
+										<h3>Socials</h3>
+										<ul class="icons">
+											<li><a href="https://github.com/KendrickXie" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+											<li><a href="https://www.linkedin.com/in/kendrick-xie-4061b320a/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										</ul>
+									</li>
+								</ul>
+							</section>
 						</div>
 					</section>
 
