update bio, experience, and projects

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Kendrick Xie</h1>
-							<p>Undergraduate student pursuing a Bachelor of Science - BS in Computer Science from the University of Chicago.</p>
+							<p>Bachelor of Science - BS in Computer Science from the University of Chicago expected June 2024</p>
+							<p>Master of Science in Engineering - MSE in Robotics from the University of Pennsylvania expected May 2026</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -51,7 +52,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>About Me</h2>
-									<p>I have a life-long passion for technology, which started with my love for PC gaming. From there, I became interested in computer science, and in particular, topics such as robotics, data engineering, software development, and game design.</p>
+									<p>Kendrick Xie's fascination with videogames and animations during his childhood ignited a passion that paved his academic and professional journey. This led him to pursue a degree in Computer Science, with a specialization in machine learning and a minor in Media Arts and Design at the University of Chicago. Here, Kendrick not only honed his technical expertise but also began to explore the potential of machine learning as a transformative tool in the realm of digital creation and robotics. Today, Kendrick's work relates to how computers interpret can interpret the physical world. Leveraging machine learning, he hopes to ease the burden of everyday tasks through autonomous robots.</p>
 								</div>
 							</div>
 						</section>
@@ -61,6 +62,17 @@
 					<section id="two" class="wrapper style3 spotlights">
 						<div class="inner">
 							<h2>Project Demos</h2>
+								<section>
+									<span class="icon solid major fa-robot"></span>
+									<h3>Character Alchemy</h3>
+									<h4>University of Chicago</h4>
+									<h5>January 2024 - February 2024</h5>
+									<p>Translated live-action videos into 2D animations the AI tools EeryDreamTrainer, Stable Diffusion, and WarpFusion</p>
+									<div class="iframe-container">
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/klaCk9TM8Uc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+									<h4>Drone footage of a mountain and a video of Kendrick are animated in a 2D anime art style.</h4>
+								</section>
 								<section>
 									<span class="icon solid major fa-robot"></span>
 									<h3>Gridshot Targeting System</h3>
@@ -95,7 +107,18 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-robot"></span>
-									<h3>Robotics Software Engineer and Research Intern</h3>
+									<h3>Robotics Research Assistant</h3>
+									<h4>Human-Robot Interaction Lab at the University of Chicago</h4>
+									<h5>July 2023 - December 2023</h5>
+									<p>
+										- Adapted a robot arm to execute commands received from a deep reinforcement learning model to perform pick-and-place tasks
+										<br>- Modified the software on 25 mobile robots to be compatible with robot arms and replacement LiDAR sensors
+										<br>- Updated the Introduction to Robotics course curriculum and website to use new generation Turtlebot4 robots
+										<br>- Designed and laser cut mounting platforms to attach robot arms to Turtlebot4s
+								</section>
+								<section>
+									<span class="icon solid major fa-robot"></span>
+									<h3>Robotics Engineer Intern</h3>
 									<h4>Argonne National Laboratory</h4>
 									<h5>July 2022 - September 2022</h5>
 									<p>
