update project links

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<h5>January 2024 - February 2024</h5>
 									<p>Translated live-action videos into 2D animations the AI tools EeryDreamTrainer, Stable Diffusion, and WarpFusion</p>
 									<div class="iframe-container">
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/klaCk9TM8Uc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/sTujEA_TCO4?si=gm1cwMMVyqox2hMx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</div>
 									<h4>Drone footage of a mountain and a video of Kendrick are animated in a 2D anime art style.</h4>
 								</section>
