--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-robot"></span>
-									<h3>Gridshot Targeting System</h3>
+									<h3>Robot Targeting System</h3>
 									<h4>University of Chicago</h4>
 									<h5>June 2022</h5>
 									<p>Programmed a robot to target and shoot lasers at recognized faces. Implemented Q-Learning to conduct a field scan and find the optimal order of targets to shoot according to a custom scoring system</p>
@@ -84,18 +84,6 @@
 									</div>
 									<h4>The robot aims a laser at pictures of Chris Rock once a picture of Jada Smith is within view.</h4>
 									<p>You can visit the project GitHub repository <a href="https://github.com/KendrickXie/robotics_final_project">here</a>.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-gamepad"></span>
-									<h3>Jumpy Boys</h3>
-									<h4>University of Chicago</h4>
-									<h5>June 2022</h5>
-									<p>Created a platformer using Godot where the goal is to collect all eleven coins on the map as fast as possible. The game features challenging physics and requires teamwork to succeed.</p>
-									<div class="iframe-container">
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/IvqJJwKfEDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-									</div>
-									<h4>Cocreator Josh Preston and I playtest Jumpy Boys (3x Speed)</h4>
-									<p>You can download and play the game <a href="https://drive.google.com/drive/folders/1lvU7zyjZ1RVhRsRJwJpd1r9pdmOQl_HJ?usp=sharing">here</a>.</p>
 								</section>
 						</div>
 					</section>
@@ -167,11 +155,37 @@
 							<h2>Projects</h2>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-robot"></span>
-									<h3>Particle Filter Localization</h3>
+									<span class="icon solid major fa-eye"></span>
+									<h3>Soccer Player Object Detection with DETR</h3>
 									<h4>University of Chicago</h4>
-									<h5>April 2022</h5>
-									<p>Estimated position and orientation of robots in a controlled space by generating and filtering virtual particles that matched the robot's sensor measurements</p>
+									<h5>February 2024</h5>
+									<p>Fine-tuned a pre-trained DETR model to detect the location and size of soccer players on a field</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-database"></span>
+									<h3>3D Animation Pipeline</h3>
+									<h4>University of Chicago</h4>
+									<h5>May 2023</h5>
+									<p>Implemented a pipeline to modify and animate 3D models. The pipeline supports edge collapses, loop
+										subdivisions, and Laplacian smoothing using half-edge data structures. To animate models, meshes are rigged and
+										skinned, and B-splines are used to smoothly adjust joint angles</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-database"></span>
+									<h3>Database Management System</h3>
+									<h4>University of Chicago</h4>
+									<h5>March 2023 - May 2023</h5>
+									<p>Implemented the storage manager and query executor of a relational database management system. The storage
+										manager stores and retrieves data in heap files while the query executor supports common SQL query operations</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-vr-cardboard"></span>
+									<h3>VR Activity Identification</h3>
+									<h4>University of Chicago</h4>
+									<h5>January 2023 - March 2023</h5>
+									<p>Utilized accelerometer and gyroscope data from a VR headset and controllers to identify the activity of a user in
+										real-time. A machine learning model was trained to distinguish between activities such as sitting, standing,
+										running, jumping jacks, and bicep curls</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-robot"></span>
@@ -179,6 +193,20 @@
 									<h4>University of Chicago</h4>
 									<h5>May 2022</h5>
 									<p>Taught a robot to pick up objects and place them in the correct locations by implementing a Q-Learning algorithm</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-robot"></span>
+									<h3>Particle Filter Localization</h3>
+									<h4>University of Chicago</h4>
+									<h5>April 2022</h5>
+									<p>Estimated position and orientation of robots in a controlled space by generating and filtering virtual particles that matched the robot's sensor measurements</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-wifi"></span>
+									<h3>Internet Relay Chat Server</h3>
+									<h4>University of Chicago</h4>
+									<h5>March 2022</h5>
+									<p>Implemented a system that is compliant with IRC protocols allowing IRC clients to communicate with the server and relay messages between each other</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-wifi"></span>
@@ -193,13 +221,6 @@
 									<h4>University of Chicago</h4>
 									<h5>February 2022</h5>
 									<p>Implemented the Transmission Control Protocol, a standard that defines how to establish and maintain a network conversation by which applications can exchange data</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-wifi"></span>
-									<h3>Internet Relay Chat Server</h3>
-									<h4>University of Chicago</h4>
-									<h5>March 2022</h5>
-									<p>Implemented a system that is compliant with IRC protocols allowing IRC clients to communicate with the server and relay messages between each other</p>
 								</section>
 							</div>
 						</div>
