change animation icon

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 									<p>Fine-tuned a pre-trained DETR model to detect the location and size of soccer players on a field</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-database"></span>
+									<span class="icon solid major fa-cube"></span>
 									<h3>3D Animation Pipeline</h3>
 									<h4>University of Chicago</h4>
 									<h5>May 2023</h5>
