add project demos

--- a/index.html
+++ b/index.html
@@ -85,6 +85,33 @@
 									<h4>The robot aims a laser at pictures of Chris Rock once a picture of Jada Smith is within view.</h4>
 									<p>You can visit the project GitHub repository <a href="https://github.com/KendrickXie/robotics_final_project">here</a>.</p>
 								</section>
+								<section>
+									<span class="icon solid major fa-robot"></span>
+									<h3>Q-Learning</h3>
+									<h4>University of Chicago</h4>
+									<h5>May 2022</h5>
+									<p>Taught a robot to pick up objects and place them in the correct locations by implementing a Q-Learning algorithm</p>
+									<div class="gif-container" style="display: flex; justify-content: center; padding: 0 20px;">
+										<img src="images/q_learning.gif" alt="Q-Learning Project GIF" style="max-width: 100%; height: auto;">
+									</div>
+									<h4>The robot picks up colored objects and places them in front of the correct AR tag (4x Speed).</h4>
+									<p>You can visit the project GitHub repository <a href="https://github.com/KendrickXie/q_learning_project/tree/main">here</a>.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-robot"></span>
+									<h3>Particle Filter Localization</h3>
+									<h4>University of Chicago</h4>
+									<h5>April 2022</h5>
+									<p>Estimated position and orientation of robots in a controlled space by generating and filtering virtual particles that matched the robot's sensor measurements</p>
+									<div class="video-container" style="position: relative; padding-top: 56.25%;"> <!-- Aspect ratio padding hack -->
+										<video style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" controls>
+											<source src="images/particle_filter.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
+									</div>
+									<h4>The robot's estimated position becomes more accurate as the robot moves through the maze and obtains more sensor measurements.</h4>
+									<p>You can visit the project GitHub repository <a href="https://github.com/KendrickXie/particle_filter_project">here</a>.</p>
+								</section>
 						</div>
 					</section>
 
@@ -160,6 +187,7 @@
 									<h4>University of Chicago</h4>
 									<h5>February 2024</h5>
 									<p>Fine-tuned a pre-trained DETR model to detect the location and size of soccer players on a field</p>
+									<p>You can visit the project GitHub repository <a href="https://github.com/KendrickXie/soccer-player-detection-with-DETR">here</a>.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cube"></span>
@@ -186,20 +214,6 @@
 									<p>Utilized accelerometer and gyroscope data from a VR headset and controllers to identify the activity of a user in
 										real-time. A machine learning model was trained to distinguish between activities such as sitting, standing,
 										running, jumping jacks, and bicep curls</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-robot"></span>
-									<h3>Q-Learning</h3>
-									<h4>University of Chicago</h4>
-									<h5>May 2022</h5>
-									<p>Taught a robot to pick up objects and place them in the correct locations by implementing a Q-Learning algorithm</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-robot"></span>
-									<h3>Particle Filter Localization</h3>
-									<h4>University of Chicago</h4>
-									<h5>April 2022</h5>
-									<p>Estimated position and orientation of robots in a controlled space by generating and filtering virtual particles that matched the robot's sensor measurements</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-wifi"></span>
