updated project demos

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<h2>Project Demos</h2>
 								<section>
 									<span class="icon solid major fa-robot"></span>
-									<h3>Character Alchemy</h3>
+									<h3>AI Animation</h3>
 									<h4>University of Chicago</h4>
 									<h5>January 2024 - February 2024</h5>
 									<p>Translated live-action videos into 2D animations the AI tools EeryDreamTrainer, Stable Diffusion, and WarpFusion</p>
@@ -72,6 +72,18 @@
 										<iframe width="560" height="315" src="https://www.youtube.com/embed/sTujEA_TCO4?si=gm1cwMMVyqox2hMx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</div>
 									<h4>Drone footage of a mountain and a video of Kendrick are animated in a 2D anime art style.</h4>
+								</section>
+								<section>
+									<span class="icon solid major fa-gamepad"></span>
+									<h3>4giveness</h3>
+									<h4>University of Chicago</h4>
+									<h5>November 2022</h5>
+									<p>Created a platformer where a researcher has died of the disease he was trying to cure. Before he can pass to the afterlife, he must navigate difficult obstacle courses, encountering the infected patient that he failed</p>
+									<div class="iframe-container">
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/yvePth1BgP4?si=K5SCq5uB-JcE0LHS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+									<h4>Walkthrough of the game</h4>
+									<p>You can play the game <a href="https://kendrickx.itch.io/4giveness">here</a>.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-robot"></span>
@@ -84,6 +96,18 @@
 									</div>
 									<h4>The robot aims a laser at pictures of Chris Rock once a picture of Jada Smith is within view.</h4>
 									<p>You can visit the project GitHub repository <a href="https://github.com/KendrickXie/robotics_final_project">here</a>.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-gamepad"></span>
+									<h3>Jumpy Boys</h3>
+									<h4>University of Chicago</h4>
+									<h5>June 2022</h5>
+									<p>Created a platformer using Godot where the goal is to collect all eleven coins on the map as fast as possible. The game features challenging physics and requires teamwork to succeed</p>
+									<div class="iframe-container">
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/IvqJJwKfEDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+									<h4>Cocreator Josh Preston and I playtest Jumpy Boys (3x Speed)</h4>
+									<p>You can download and play the game <a href="https://drive.google.com/drive/folders/1lvU7zyjZ1RVhRsRJwJpd1r9pdmOQl_HJ?usp=sharing">here</a>.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-robot"></span>
