--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Kendrick Xie</h1>
-							<p>Bachelor of Science in Computer Science from the University of Chicago expected June 2024</p>
-							<p>Specialization in Machine Learning and Minor in Media Arts and Design</p>
+							<p>Master of Science in Engineering, Robotics from the University of Pennsylvania with a Specialization in Artificial Intelligence and Computer Vision (Expected May 2026)</p>
+							<p>Bachelor of Science in Computer Science from the University of Chicago with a Specialization in Machine Learning and a Minor in Media Arts and Design (Received June 2024)</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
